# rag-minimum-azure-ai-search

./: .env.example  .gitignore  README.md  chat_app.py  chat_app_v2.py  pull_aisearch_index.py  pull_aisearch_index_v2.py  push_aisearch_index.py  push_aisearch_index_v2.py  push_blob_aisearch_index.py  pyproject.toml
data/: faq.csv
